After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 547420 - nautilus doesn't offer to set the desktop background from an image file's contextual menu
nautilus doesn't offer to set the desktop background from an image file's con...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.23.x
Other All
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 599659 690412 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2008-08-12 12:33 UTC by Thierry Vignaud
Modified: 2012-12-18 13:15 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
Add ability to set wallpaper from image files (6.67 KB, patch)
2012-08-15 22:18 UTC, William Jon McCann
needs-work Details | Review
Add ability to set wallpaper from image files (6.68 KB, patch)
2012-08-16 01:54 UTC, William Jon McCann
committed Details | Review

Description Thierry Vignaud 2008-08-12 12:33:37 UTC
A user who just switched from Windows to GNOME complained
that unlike Windows, there was no item in the contextual menu
of a desktop icon in order to set the desktop background
out of an image file.

The contextual menu only offer to view the image or to open it with some program.

This minor usuability issue could be fixed by adding a new menu item below "View with...": "Set as background image".

(Initially caught while using gnome-2.21 but sill there as of nautilus-2.23.6.1)

Other information:
Comment 1 Allan Day 2008-08-12 22:28:07 UTC
Thanks for the suggestion! Setting status to new - I'll leave it to the Nautilus developers to decide what to do about it.
Comment 2 Cosimo Cecchi 2010-08-02 13:06:49 UTC
*** Bug 599659 has been marked as a duplicate of this bug. ***
Comment 3 William Jon McCann 2012-08-15 22:18:56 UTC
Created attachment 221324 [details] [review]
Add ability to set wallpaper from image files

http://bugzilla.gnome.org/show_bug.cgi?id=547420
Comment 4 Cosimo Cecchi 2012-08-16 01:38:41 UTC
Review of attachment 221324 [details] [review]:

::: src/nautilus-view.c
@@ +6513,3 @@
+
+	if (uri == NULL)
+set_uri_as_wallpaper (const char *uri)

Why strdup()-ing this?

@@ +6570,3 @@
+
+	/* if item is not in Pictures, copy it there. then set it as
+	gpointer key, value;

Where does the "item not in Pictures" check take place?
Comment 5 William Jon McCann 2012-08-16 01:54:14 UTC
Created attachment 221337 [details] [review]
Add ability to set wallpaper from image files

http://bugzilla.gnome.org/show_bug.cgi?id=547420
Comment 6 Cosimo Cecchi 2012-08-16 01:59:43 UTC
Review of attachment 221337 [details] [review]:

Looks good
Comment 7 Cosimo Cecchi 2012-12-18 13:15:09 UTC
*** Bug 690412 has been marked as a duplicate of this bug. ***