Add ability to set wallpaper from image files

http://bugzilla.gnome.org/show_bug.cgi?id=547420